--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "node node_modules/.bin/tsc  --module 'commonjs' src/*.ts src/db/*.ts"
+    "prepublish": "grunt"
   },
   "author": "Bret Little",
   "license": "MIT",
@@ -17,5 +17,10 @@
     "lodash": "~1.3.1",
     "typescript": "~0.9.1-1",
     "nopt": "~2.1.2"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-typescript": "~0.2.4",
+    "grunt-cli": "~0.1.9"
   }
 }
