--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-	"name": "largemouth",
-	"version": "0.0.1",
-	"description": "",
-	"bin": {
-		"largemouth": "bin/largemouth.js"
-	},
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"prepublish": "grunt"
-	},
-	"author": "Bret Little",
-	"license": "MIT",
-	"preferGlobal": true,
-	"dependencies": {
-		"socket.io": "~0.9.16",
-		"lodash": "~1.3.1",
-		"nopt": "~2.1.2"
-	},
-	"devDependencies": {
-		"grunt": "~0.4.1",
-		"grunt-typescript": "~0.2.4",
-		"typescript": "~0.9.1-1",
-		"grunt-cli": "~0.1.9"
-	}
+  "name": "largemouth",
+  "version": "0.0.1",
+  "description": "",
+  "bin": {
+    "largemouth": "bin/largemouth.js"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "grunt"
+  },
+  "author": "Bret Little",
+  "license": "MIT",
+  "preferGlobal": true,
+  "dependencies": {
+    "socket.io": "~0.9.16",
+    "nopt": "~2.1.2",
+    "async": "~0.2.9",
+    "lodash": "~2.2.1"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-typescript": "~0.2.4",
+    "typescript": "~0.9.1-1",
+    "grunt-cli": "~0.1.9"
+  }
 }
