--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "largemouth",
   "version": "0.1.2",
   "repository": "https://github.com/blittle/largemouth",
-  "description": "",
+  "description": "A realtime communication framework",
   "bin": {
     "largemouth": "bin/largemouth.js"
   },
@@ -22,9 +22,7 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-typescript": "~0.2.4",
-    "typescript": "~0.9.1-1",
     "grunt-cli": "~0.1.9",
-    "grunt-jasmine-node": "~0.1.0",
-    "sinon": "~1.7.3"
+    "grunt-jasmine-node": "~0.1.0"
   }
 }
