--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "largemouth",
-  "version": "0.1.2",
+  "version": "0.1.5",
   "repository": "https://github.com/blittle/largemouth",
   "description": "A realtime communication framework",
   "bin": {
@@ -9,6 +9,9 @@
   "scripts": {
     "test": "grunt test",
     "prepublish": "grunt"
+  },
+  "files": {
+    "src", "bin"
   },
   "author": "Bret Little",
   "license": "MIT",
